tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr33870_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr33870-1.c" (c, x86_64-unknown-linux-gnu)
global xx : rec_PgHdr** = #cir.ptr<null> [external, default, align 8, dso_local]
global vx : s32i = 0 [external, default, align 4, dso_local]

fn memset(%arg0: void*, %arg1: s32i, %arg2: u64i) -> void* [external, c, nothrow];
fn merge_pagelist(%arg1: rec_PgHdr*, %arg2: rec_PgHdr*) -> rec_PgHdr* [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg1: rec_PgHdr*, %arg2: rec_PgHdr*):
        %143 = alloca rec_PgHdr*, "pA", align 8
        %144 = alloca rec_PgHdr*, "pB", align 8
        %145 = alloca rec_PgHdr*, "__retval", align 8
        %146 = alloca rec_PgHdr, "result", align 8
        %147 = alloca rec_PgHdr*, "pTail", align 8
        store %arg1, %143
        store %arg2, %144
        %148 = get_member %146[1] "x" : rec_anon2E0*
        %149 = get_member %148[8] "pDirty" : rec_PgHdr**
        %150 = get_global @xx : rec_PgHdr***
        store %149, %150, align 8
        store %146, %147, align 8
        scope {
            while {
                %204 = load %143 : rec_PgHdr*, align 8
                %205 = cast(ptr_to_bool) %204 : bool
                %206 = ternary %205 ? { : bool
                    %208 = load %144 : rec_PgHdr*, align 8
                    %209 = cast(ptr_to_bool) %208 : bool
                    yield %209
                } : {
                    %207 = const #false : bool
                    yield %207
                }
                condition %206
            } do {
                scope {
                    scope {
                        %177 = load %143 : rec_PgHdr*, align 8
                        %178 = get_member %177[1] "x" : rec_anon2E0*
                        %179 = get_member %178[0] "pgno" : u32i*
                        %180 = load %179 : u32i, align 8
                        %181 = load %144 : rec_PgHdr*, align 8
                        %182 = get_member %181[1] "x" : rec_anon2E0*
                        %183 = get_member %182[0] "pgno" : u32i*
                        %184 = load %183 : u32i, align 8
                        %185 = cmp lt %180, %184 : bool
                        if %185 {
                            %195 = load %143 : rec_PgHdr*, align 8
                            %196 = load %147 : rec_PgHdr*, align 8
                            %197 = get_member %196[1] "x" : rec_anon2E0*
                            %198 = get_member %197[8] "pDirty" : rec_PgHdr**
                            store %195, %198, align 8
                            %199 = load %143 : rec_PgHdr*, align 8
                            store %199, %147, align 8
                            %200 = load %143 : rec_PgHdr*, align 8
                            %201 = get_member %200[1] "x" : rec_anon2E0*
                            %202 = get_member %201[8] "pDirty" : rec_PgHdr**
                            %203 = load %202 : rec_PgHdr*, align 8
                            store %203, %143, align 8
                            yield
                        } else {
                            %186 = load %144 : rec_PgHdr*, align 8
                            %187 = load %147 : rec_PgHdr*, align 8
                            %188 = get_member %187[1] "x" : rec_anon2E0*
                            %189 = get_member %188[8] "pDirty" : rec_PgHdr**
                            store %186, %189, align 8
                            %190 = load %144 : rec_PgHdr*, align 8
                            store %190, %147, align 8
                            %191 = load %144 : rec_PgHdr*, align 8
                            %192 = get_member %191[1] "x" : rec_anon2E0*
                            %193 = get_member %192[8] "pDirty" : rec_PgHdr**
                            %194 = load %193 : rec_PgHdr*, align 8
                            store %194, %144, align 8
                            yield
                        }
                        yield
                    }
                    %171 = get_global @xx : rec_PgHdr***
                    %172 = load %171 : rec_PgHdr**, align 8
                    %173 = load %172 : rec_PgHdr*, align 8
                    %174 = get_member %173[0] "y" : s32i*
                    %175 = load %174 : s32i, align 8
                    %176 = get_global @vx : s32i*
                    store %175, %176, align 4, volatile
                    yield
                }
                yield
            }
            yield
        }
        scope {
            %155 = load %143 : rec_PgHdr*, align 8
            %156 = cast(ptr_to_bool) %155 : bool
            if %156 {
                %167 = load %143 : rec_PgHdr*, align 8
                %168 = load %147 : rec_PgHdr*, align 8
                %169 = get_member %168[1] "x" : rec_anon2E0*
                %170 = get_member %169[8] "pDirty" : rec_PgHdr**
                store %167, %170, align 8
                yield
            } else {
                scope {
                    %157 = load %144 : rec_PgHdr*, align 8
                    %158 = cast(ptr_to_bool) %157 : bool
                    if %158 {
                        %163 = load %144 : rec_PgHdr*, align 8
                        %164 = load %147 : rec_PgHdr*, align 8
                        %165 = get_member %164[1] "x" : rec_anon2E0*
                        %166 = get_member %165[8] "pDirty" : rec_PgHdr**
                        store %163, %166, align 8
                        yield
                    } else {
                        %159 = const #cir.ptr<null> : rec_PgHdr*
                        %160 = load %147 : rec_PgHdr*, align 8
                        %161 = get_member %160[1] "x" : rec_anon2E0*
                        %162 = get_member %161[8] "pDirty" : rec_PgHdr**
                        store %159, %162, align 8
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        %151 = get_member %146[1] "x" : rec_anon2E0*
        %152 = get_member %151[8] "pDirty" : rec_PgHdr**
        %153 = load %152 : rec_PgHdr*, align 8
        store %153, %145
        %154 = load %145 : rec_PgHdr*
        return %154
}
fn sort_pagelist(%arg0: rec_PgHdr*) -> rec_PgHdr* [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: rec_PgHdr*):
        %59 = alloca rec_PgHdr*, "pIn", align 8
        %60 = alloca rec_PgHdr*, "__retval", align 8
        %61 = alloca rec_PgHdr*[25], "a", align 16
        %62 = alloca rec_PgHdr*, "p", align 8
        %63 = alloca s32i, "i", align 4
        store %arg0, %59
        %64 = cast(array_to_ptrdecay) %61 : rec_PgHdr**
        %65 = cast(bitcast) %64 : void*
        %66 = const 0 : s32i
        %67 = const 200 : u64i
        %68 = call @memset(%65, %66, %67) : void* [all]
        scope {
            while {
                %141 = load %59 : rec_PgHdr*, align 8
                %142 = cast(ptr_to_bool) %141 : bool
                condition %142
            } do {
                scope {
                    %86 = load %59 : rec_PgHdr*, align 8
                    store %86, %62, align 8
                    %87 = load %62 : rec_PgHdr*, align 8
                    %88 = get_member %87[1] "x" : rec_anon2E0*
                    %89 = get_member %88[8] "pDirty" : rec_PgHdr**
                    %90 = load %89 : rec_PgHdr*, align 8
                    store %90, %59, align 8
                    %91 = const #cir.ptr<null> : rec_PgHdr*
                    %92 = load %62 : rec_PgHdr*, align 8
                    %93 = get_member %92[1] "x" : rec_anon2E0*
                    %94 = get_member %93[8] "pDirty" : rec_PgHdr**
                    store %91, %94, align 8
                    scope {
                        %109 = const 0 : s32i
                        store %109, %63, align 4
                        for cond: {
                            %136 = load %63 : s32i, align 4
                            %137 = const 25 : s32i
                            %138 = const 1 : s32i
                            %139 = sub %137, %138 : s32i [nsw]
                            %140 = cmp lt %136, %139 : bool
                            condition %140
                        } step: {
                            %110 = load %63 : s32i, align 4
                            %111 = inc %110 : s32i [nsw]
                            store %111, %63, align 4
                            yield
                        } do {
                            scope {
                                scope {
                                    %112 = load %63 : s32i, align 4
                                    %113 = cast(integral) %112 : s64i
                                    %114 = get_element %61[%113] : rec_PgHdr**
                                    %115 = load %114 : rec_PgHdr*, align 8
                                    %116 = const #cir.ptr<null> : rec_PgHdr*
                                    %117 = cmp eq %115, %116 : bool
                                    if %117 {
                                        %132 = load %62 : rec_PgHdr*, align 8
                                        %133 = load %63 : s32i, align 4
                                        %134 = cast(integral) %133 : s64i
                                        %135 = get_element %61[%134] : rec_PgHdr**
                                        store %132, %135, align 8
                                        break
                                    } else {
                                        %118 = load %63 : s32i, align 4
                                        %119 = cast(integral) %118 : s64i
                                        %120 = get_element %61[%119] : rec_PgHdr**
                                        %121 = load %120 : rec_PgHdr*, align 8
                                        %122 = load %62 : rec_PgHdr*, align 8
                                        %123 = call @merge_pagelist(%121, %122) : rec_PgHdr* [all]
                                        store %123, %62, align 8
                                        %124 = const #cir.ptr<null> : rec_PgHdr*
                                        %125 = load %63 : s32i, align 4
                                        %126 = cast(integral) %125 : s64i
                                        %127 = get_element %61[%126] : rec_PgHdr**
                                        store %124, %127, align 8
                                        %128 = const #cir.ptr<null> : rec_PgHdr*
                                        %129 = load %63 : s32i, align 4
                                        %130 = cast(integral) %129 : s64i
                                        %131 = get_element %61[%130] : rec_PgHdr**
                                        store %128, %131, align 8
                                        yield
                                    }
                                    yield
                                }
                                yield
                            }
                            yield
                        }
                        yield
                    }
                    scope {
                        %95 = load %63 : s32i, align 4
                        %96 = const 25 : s32i
                        %97 = const 1 : s32i
                        %98 = sub %96, %97 : s32i [nsw]
                        %99 = cmp eq %95, %98 : bool
                        if %99 {
                            %100 = load %63 : s32i, align 4
                            %101 = cast(integral) %100 : s64i
                            %102 = get_element %61[%101] : rec_PgHdr**
                            %103 = load %102 : rec_PgHdr*, align 8
                            %104 = load %62 : rec_PgHdr*, align 8
                            %105 = call @merge_pagelist(%103, %104) : rec_PgHdr* [all]
                            %106 = load %63 : s32i, align 4
                            %107 = cast(integral) %106 : s64i
                            %108 = get_element %61[%107] : rec_PgHdr**
                            store %105, %108, align 8
                            yield
                        }
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        %69 = const 0 : s64i
        %70 = get_element %61[%69] : rec_PgHdr**
        %71 = load %70 : rec_PgHdr*, align 16
        store %71, %62, align 8
        scope {
            %74 = const 1 : s32i
            store %74, %63, align 4
            for cond: {
                %83 = load %63 : s32i, align 4
                %84 = const 25 : s32i
                %85 = cmp lt %83, %84 : bool
                condition %85
            } step: {
                %75 = load %63 : s32i, align 4
                %76 = inc %75 : s32i [nsw]
                store %76, %63, align 4
                yield
            } do {
                scope {
                    %77 = load %62 : rec_PgHdr*, align 8
                    %78 = load %63 : s32i, align 4
                    %79 = cast(integral) %78 : s64i
                    %80 = get_element %61[%79] : rec_PgHdr**
                    %81 = load %80 : rec_PgHdr*, align 8
                    %82 = call @merge_pagelist(%77, %81) : rec_PgHdr* [all]
                    store %82, %62, align 8
                    yield
                }
                yield
            }
            yield
        }
        %72 = load %62 : rec_PgHdr*, align 8
        store %72, %60
        %73 = load %60 : rec_PgHdr*
        return %73
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_PgHdr[5], "a", align 16
    %2 = alloca rec_PgHdr*, "p", align 8
    %3 = const 0 : s32i
    store %3, %0
    %4 = const 5 : u32i
    %5 = const 0 : s64i
    %6 = get_element %1[%5] : rec_PgHdr*
    %7 = get_member %6[1] "x" : rec_anon2E0*
    %8 = get_member %7[0] "pgno" : u32i*
    store %4, %8, align 8
    %9 = const 1 : s64i
    %10 = get_element %1[%9] : rec_PgHdr*
    %11 = const 0 : s64i
    %12 = get_element %1[%11] : rec_PgHdr*
    %13 = get_member %12[1] "x" : rec_anon2E0*
    %14 = get_member %13[8] "pDirty" : rec_PgHdr**
    store %10, %14, align 8
    %15 = const 4 : u32i
    %16 = const 1 : s64i
    %17 = get_element %1[%16] : rec_PgHdr*
    %18 = get_member %17[1] "x" : rec_anon2E0*
    %19 = get_member %18[0] "pgno" : u32i*
    store %15, %19, align 8
    %20 = const 2 : s64i
    %21 = get_element %1[%20] : rec_PgHdr*
    %22 = const 1 : s64i
    %23 = get_element %1[%22] : rec_PgHdr*
    %24 = get_member %23[1] "x" : rec_anon2E0*
    %25 = get_member %24[8] "pDirty" : rec_PgHdr**
    store %21, %25, align 8
    %26 = const 1 : u32i
    %27 = const 2 : s64i
    %28 = get_element %1[%27] : rec_PgHdr*
    %29 = get_member %28[1] "x" : rec_anon2E0*
    %30 = get_member %29[0] "pgno" : u32i*
    store %26, %30, align 8
    %31 = const 3 : s64i
    %32 = get_element %1[%31] : rec_PgHdr*
    %33 = const 2 : s64i
    %34 = get_element %1[%33] : rec_PgHdr*
    %35 = get_member %34[1] "x" : rec_anon2E0*
    %36 = get_member %35[8] "pDirty" : rec_PgHdr**
    store %32, %36, align 8
    %37 = const 3 : u32i
    %38 = const 3 : s64i
    %39 = get_element %1[%38] : rec_PgHdr*
    %40 = get_member %39[1] "x" : rec_anon2E0*
    %41 = get_member %40[0] "pgno" : u32i*
    store %37, %41, align 8
    %42 = const #cir.ptr<null> : rec_PgHdr*
    %43 = const 3 : s64i
    %44 = get_element %1[%43] : rec_PgHdr*
    %45 = get_member %44[1] "x" : rec_anon2E0*
    %46 = get_member %45[8] "pDirty" : rec_PgHdr**
    store %42, %46, align 8
    %47 = const 0 : s64i
    %48 = get_element %1[%47] : rec_PgHdr*
    %49 = call @sort_pagelist(%48) : rec_PgHdr* [all]
    store %49, %2, align 8
    scope {
        %52 = load %2 : rec_PgHdr*, align 8
        %53 = get_member %52[1] "x" : rec_anon2E0*
        %54 = get_member %53[8] "pDirty" : rec_PgHdr**
        %55 = load %54 : rec_PgHdr*, align 8
        %56 = load %2 : rec_PgHdr*, align 8
        %57 = cmp eq %55, %56 : bool
        if %57 {
            %58 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %50 = const 0 : s32i
    store %50, %0
    %51 = load %0 : s32i
    return %51
}
